--- a/css/estilos.css
+++ b/css/estilos.css
@@ -23,7 +23,7 @@ body {
 
 h2 {
   color: rgb(8, 158, 218);
-  font-size: 46px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 5;
   font-weight: normal;
   border: black 10px;
   margin: 20px;
@@ -84,7 +84,7 @@ header nav ul li a:hover {
   color: black;
   letter-spacing: 0, 5cm;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 13px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 1;
   font-weight: 700;
   letter-spacing: 4px;
 }
@@ -108,18 +108,18 @@ header nav ul li a:hover {
 }
 .hero div h1 {
   color: white;
-  background-color: rgba(0, 0, 0, 0.164);
+  background-color: rgba(0, 0, 0, 0.171);
   font-family: cursive;
   font-family: "Bitter", serif;
   font-weight: 350;
-  font-size: 80px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 4;
   border-radius: 50px;
   padding: 1%;
 }
 .hero div .boton-a {
   background-color: skyblue;
   color: white;
-  font-size: 20px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 2;
   font-family: Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -139,7 +139,7 @@ header nav ul li a:hover {
 .hero div p {
   background-color: white;
   color: black;
-  font-size: 27px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 3;
   font-family: impact, sans-serif;
   font-style: italic;
   font-weight: normal;
@@ -162,7 +162,7 @@ header nav ul li a:hover {
   padding: 15px;
 }
 .terapia div h2 {
-  font-size: 46px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 5;
   font-weight: normal;
   color: rgb(8, 158, 218);
   margin: 15px;
@@ -170,7 +170,7 @@ header nav ul li a:hover {
 .terapia div p {
   background-color: white;
   font-weight: lighter;
-  font-size: 20px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 2;
   word-spacing: 2px;
   margin-bottom: 20px;
   text-align: justify;
@@ -178,7 +178,7 @@ header nav ul li a:hover {
   margin-right: 20%;
 }
 .terapia div p::first-letter {
-  font-size: 50px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 6;
 }
 .terapia div {
   width: 50%;
@@ -207,7 +207,7 @@ header nav ul li a:hover {
   padding: 15px;
 }
 .porque-terapia div h2 {
-  font-size: 46px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 5;
   font-weight: normal;
   color: rgb(8, 158, 218);
   margin: 15px;
@@ -216,14 +216,14 @@ header nav ul li a:hover {
 .porque-terapia div p {
   background-color: white;
   font-weight: lighter;
-  font-size: 20px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 2;
   word-spacing: 2px;
   margin-bottom: 20px;
   text-align: justify;
   padding: 15px;
 }
 .porque-terapia div p::first-letter {
-  font-size: 50px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 6;
 }
 .porque-terapia img {
   width: 634px;
@@ -247,7 +247,7 @@ header nav ul li a:hover {
   padding: 15px;
 }
 .esperar-terapia div h2 {
-  font-size: 46px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 5;
   font-weight: normal;
   color: rgb(8, 158, 218);
   margin: 15px;
@@ -256,14 +256,14 @@ header nav ul li a:hover {
 .esperar-terapia div p {
   background-color: rgb(255, 255, 255);
   font-weight: lighter;
-  font-size: 20px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 2;
   word-spacing: 2px;
   margin-bottom: 20px;
   text-align: justify;
   padding: 15px;
 }
 .esperar-terapia div p::first-letter {
-  font-size: 50px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 6;
 }
 .esperar-terapia img {
   width: 634px;
@@ -314,7 +314,7 @@ header nav ul li a:hover {
 }
 .servicios .servicios-psico div h3 {
   color: rgb(8, 158, 218);
-  font: 16px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 7;
   padding-bottom: 20px;
   font-weight: 600;
 }
@@ -336,7 +336,7 @@ header nav ul li a:hover {
 
 /* PERFIL */
 main .perfil-titulo {
-  font-size: 46px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 5;
   font-weight: normal;
   color: rgb(8, 158, 218);
   margin: 15px;
@@ -360,7 +360,7 @@ main .perfil-jenni div {
 main .perfil-jenni div p {
   background-color: white;
   font-weight: lighter;
-  font-size: 20px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 2;
   word-spacing: 2px;
   margin-bottom: 15px;
   text-align: justify;
@@ -371,7 +371,7 @@ main .perfil-jenni div p {
   border-radius: 20px;
 }
 main .perfil-jenni div p::first-letter {
-  font-size: 50px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 6;
 }
 main .perfil-jenni div img {
   width: 350px;
@@ -383,7 +383,7 @@ main .perfil-jenni div img {
 
 /* TURNOS */
 main .turnos-titulo {
-  font-size: 46px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 5;
   font-weight: normal;
   color: rgb(8, 158, 218);
   margin: 15px;
@@ -419,7 +419,7 @@ main .turnos div form div .btn-primary {
 
 /* PREGUNTAS FRECUENTES */
 main .preguntas-titulo {
-  font-size: 46px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 5;
   font-weight: normal;
   color: rgb(8, 158, 218);
   margin: 15px;
@@ -442,7 +442,7 @@ main .preguntas-frecuentes div {
 
 /* CONTACTO */
 main .contacto-titulo {
-  font-size: 46px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 5;
   font-weight: normal;
   color: rgb(8, 158, 218);
   margin: 15px;
@@ -497,7 +497,7 @@ main .contacto div .btn-primary {
 .grid-pie .grid2 h2 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-style: normal;
-  font-size: 30px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 8;
   font-weight: 500;
   color: black;
 }
@@ -519,7 +519,7 @@ main .contacto div .btn-primary {
   color: black;
   letter-spacing: 0, 5cm;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 13px;
+  font-size: nth 13px, 20px, 27px, 80px, 46px, 50px, 16px, 30px, 1;
   font-weight: 700;
   letter-spacing: 4px;
   justify-self: center;
