--- a/scss/base/_funcionalidades.scss
+++ b/scss/base/_funcionalidades.scss
@@ -5,7 +5,7 @@ $color-3: white;
 $color-4: rgb(8, 158, 218);
 $color-5: rgb(255, 255, 255);
 $color-6: gray;
-$color-7: rgba(0,0,0,0.75);
+$color-7: rgba(0, 0, 0, 0.171);
 
 /*LISTAS*/
 
