--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -20,9 +20,9 @@
         h2{
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             font-style: normal;
-            font-size: 30px;
+            font-size: nth ($font-size,8);
             font-weight: 500;
-            color: black;
+            color: $color-1;
         }
         div{
             img{
@@ -44,16 +44,16 @@
                     list-style: none;
                     margin: 5px 7px 10px 7px;
                     a{
-                        color:black;
+                        color: $color-1;
                         letter-spacing: 0,05cm;
                         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-                        font-size: 13px;
+                        font-size: nth ($font-size,1);
                         font-weight: 700;
                         letter-spacing: 4px;
                         justify-self:center;
                         text-decoration: none;
                         &:hover{
-                            color: skyblue;
+                            color: $color-2;
                         }
                     }
                 }
