--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,5 +1,5 @@
 header{
-    background-color:white;
+    background-color: $color-3;
     background-image: url("../img/img-fondo.webp");
     padding: 10px;
     position: sticky;
@@ -21,7 +21,7 @@ header{
                 a{
                     text-decoration: none;
                     &:hover{
-                        color: skyblue;
+                        color: $color-2;
                     }
                 }
             }
@@ -32,10 +32,10 @@ header{
         ul{
             li{
                 a{
-                    color:black;
+                    color: $color-1;
                     letter-spacing: 0,05cm;
                     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-                    font-size: 13px;
+                    font-size: nth ($font-size,1);
                     font-weight: 700;
                     letter-spacing: 4px;
                 }
@@ -58,19 +58,19 @@ header{
         justify-content: center;
         align-items: center;
         h1{
-            color:white;
-            background-color: rgba(0, 0, 0, 0.164);
+            color: $color-3;
+            background-color: $color-7;
             font-family: cursive;
             font-family: "Bitter", serif;
             font-weight:350;
-            font-size: 80px;
+            font-size: nth ($font-size,4);
             border-radius: 50px;
             padding: 1%;
         }
         .boton-a{
-            background-color:skyblue;
-            color: white;
-            font-size: 20px;
+            background-color: $color-2;
+            color: $color-3;
+            font-size: nth ($font-size,2);
             font-family:Arial, Helvetica, sans-serif;
             font-style:normal;
             font-weight: 500;
@@ -83,14 +83,14 @@ header{
             transition-property: all;
             transition-duration: 1s;
             &:hover{
-                background-color: white;
-                color: skyblue;
+                background-color: $color-3;
+                color: $color-2;
             }
         }
         p{
-            background-color: white;
-            color: black;
-            font-size: 27px;
+            background-color: $color-3;
+            color: $color-1;
+            font-size: nth ($font-size,3);
             font-family: impact, sans-serif;
             font-style: italic;
             font-weight: normal;
