--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -17,7 +17,7 @@ body{
 }
 h2{
     color: $color-4;
-    font-size: nth ($font-size,5);
+    font-size: 46px;
     font-weight: normal;
     border: $color-1 10px;
     margin: 20px;
