--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -20,7 +20,7 @@
         h2{
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             font-style: normal;
-            font-size: nth ($font-size,8);
+            font-size: 30px;
             font-weight: 500;
             color: $color-1;
         }
@@ -47,7 +47,7 @@
                         color: $color-1;
                         letter-spacing: 0,05cm;
                         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-                        font-size: nth ($font-size,1);
+                        font-size: 13px;
                         font-weight: 700;
                         letter-spacing: 4px;
                         justify-self:center;
