--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -35,7 +35,7 @@ header{
                     color: $color-1;
                     letter-spacing: 0,05cm;
                     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-                    font-size: nth ($font-size,1);
+                    font-size: 13px;
                     font-weight: 700;
                     letter-spacing: 4px;
                 }
@@ -63,14 +63,14 @@ header{
             font-family: cursive;
             font-family: "Bitter", serif;
             font-weight:350;
-            font-size: nth ($font-size,4);
+            font-size: 80px;
             border-radius: 50px;
             padding: 1%;
         }
         .boton-a{
             background-color: $color-2;
             color: $color-3;
-            font-size: nth ($font-size,2);
+            font-size: 20px;
             font-family:Arial, Helvetica, sans-serif;
             font-style:normal;
             font-weight: 500;
@@ -90,7 +90,7 @@ header{
         p{
             background-color: $color-3;
             color: $color-1;
-            font-size: nth ($font-size,3);
+            font-size: 27px;
             font-family: impact, sans-serif;
             font-style: italic;
             font-weight: normal;
