--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -5,12 +5,9 @@
     margin: 30px;
     flex-direction: row-reverse;
     div{
-        width: 50%;
-        justify-content: center;
-        align-items: center;
-        padding: 15px;
+        @extend %center;
         h2{
-            font-size: 46px;
+            font-size: nth($font-size,5);
             font-weight: normal;
             color: $color-4;
             margin: 15px;
@@ -18,22 +15,19 @@
         p{
             background-color: $color-3;
             font-weight: lighter;
-            font-size: 20px;
+            font-size: nth($font-size,2);
             word-spacing: 2px;
             margin-bottom: 20px;
             text-align: justify;
             padding: 15px;
             margin-right: 20%;
             &::first-letter{
-                font-size: 50px;
+                font-size: nth($font-size,6);
             }
         }
     }
     div{
-        width: 50%;
-        justify-content: center;
-        align-items: center;
-        padding: 15px;
+        @extend %center;
         img{
             width: 315px;
             height: 450px;
@@ -49,12 +43,9 @@
     display: flex;
     margin: 30px;
     div{
-        width: 50%;
-        justify-content: center;
-        align-items: center;
-        padding: 15px;
+        @extend %center;
         h2{
-            font-size: 46px;
+            font-size: nth($font-size,5);
             font-weight: normal;
             color: $color-4;
             margin: 15px;
@@ -63,13 +54,13 @@
         p{
             background-color: $color-3;
             font-weight: lighter;
-            font-size: 20px;
+            font-size: nth($font-size,2);
             word-spacing: 2px;
             margin-bottom: 20px;
             text-align: justify;
             padding: 15px;
             &::first-letter{
-                font-size: 50px;
+                font-size: nth($font-size,6);
             }
         }
     }
@@ -88,12 +79,9 @@
     margin: 30px;
     flex-direction: row-reverse;
     div{
-        width: 50%;
-        justify-content: center;
-        align-items: center;
-        padding: 15px;
+        @extend %center;
         h2{
-            font-size: 46px;
+            font-size: nth($font-size,5);
             font-weight: normal;
             color: $color-4;
             margin: 15px;
@@ -102,13 +90,13 @@
         p{
             background-color: $color-5;
             font-weight: lighter;
-            font-size: 20px;
+            font-size: nth($font-size,2);
             word-spacing: 2px;
             margin-bottom: 20px;
             text-align: justify;
             padding: 15px;
             &::first-letter{
-                font-size: 50px;
+                font-size: nth($font-size,6);
             }
         }
     }
@@ -144,9 +132,7 @@
         text-align: center;
     }
     .servicios-psico{
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
+        @include flex (flex, space-around, center);
         flex-wrap: wrap;
         div{
             border: 1px solid $color-6;
@@ -159,7 +145,7 @@
         -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
             h3{
                 color: $color-4;
-                font-size: 16px;
+                font-size: nth($font-size,8);
                 padding-bottom: 20px;
                 font-weight: 600;
             }
@@ -185,7 +171,7 @@
 
 main{
     .perfil-titulo{
-        font-size: 46px;
+        font-size: nth($font-size,5);
         font-weight: normal;
         color: $color-4;
         margin: 15px;
@@ -200,16 +186,13 @@ main{
         background-attachment: fixed;
         margin: 30px;
         div{
-            width: 50%;
-            justify-content: center;
-            align-items: center;
-            padding: 15px;
+            @extend %center;
             h2{
             }
             p{
                 background-color: $color-3;
                 font-weight: lighter;
-                font-size: 20px;
+                font-size: nth($font-size,2);
                 word-spacing: 2px;
                 margin-bottom: 15px;
                 text-align: justify;
@@ -219,7 +202,7 @@ main{
                 width: 130%;
                 border-radius: 20px;
                 &::first-letter{
-                    font-size: 50px;
+                    font-size: nth($font-size,6);
                 }
             }
             img{
@@ -237,7 +220,7 @@ main{
 
 main{
     .turnos-titulo{
-        font-size: 46px;
+        font-size: nth($font-size,5);
         font-weight: normal;
         color: $color-4;
         margin: 15px;
@@ -278,7 +261,7 @@ main{
 
 main{
     .preguntas-titulo{
-        font-size: 46px;
+        font-size: nth($font-size,5);
         font-weight: normal;
         color: $color-4;
         margin: 15px;
@@ -304,7 +287,7 @@ main{
 
 main{
     .contacto-titulo{
-        font-size: 46px;
+        font-size: nth($font-size,5);
         font-weight: normal;
         color: $color-4;
         margin: 15px;
