--- a/css/estilos.css
+++ b/css/estilos.css
@@ -55,7 +55,7 @@ p {
   background-color: skyblue;
   color: white;
   transition-property: all;
-  transition-duration: 1s;
+  transition-duration: 0.5s;
 }
 .boton:hover {
   background-color: white;
@@ -86,6 +86,7 @@ header nav ul li {
 }
 header nav ul li a {
   text-decoration: none;
+  transition: 0.5s;
 }
 header nav ul li a:hover {
   color: skyblue;
@@ -189,7 +190,7 @@ header nav ul li a:hover {
   width: 315px;
   height: 450px;
   margin-left: 20%;
-  border-radius: 20px;
+  border-radius: 15%;
   padding: 10px;
 }
 
@@ -222,7 +223,7 @@ header nav ul li a:hover {
   width: 634px;
   height: 500px;
   margin-top: 7%;
-  border-radius: 20px;
+  border-radius: 50%;
   padding: 10px;
 }
 
@@ -256,7 +257,7 @@ header nav ul li a:hover {
   width: 634px;
   height: 500px;
   margin-top: 9%;
-  border-radius: 20px;
+  border-radius: 50%;
   padding: 10px;
 }
 
@@ -298,6 +299,7 @@ header nav ul li a:hover {
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+  transition: 1s;
 }
 .servicios .servicios-psico div h3 {
   color: rgb(8, 158, 218);
@@ -309,7 +311,16 @@ header nav ul li a:hover {
   width: 340px;
   height: auto;
   padding-bottom: 20px;
-  border-radius: 15px;
+  border-radius: 45%;
+}
+.servicios .servicios-psico .servicios-psico1:hover {
+  transform: scale(1.2);
+}
+.servicios .servicios-psico .servicios-psico2:hover {
+  transform: scale(1.2);
+}
+.servicios .servicios-psico .servicios-psico3:hover {
+  transform: scale(1.2);
 }
 
 .foto {
@@ -487,6 +498,10 @@ main .contacto div .btn-primary {
   height: 23px;
   position: absolute;
   left: 7cm;
+  transition: 1s;
+}
+.grid-pie .grid2 div img:hover {
+  transform: scale(1.3);
 }
 .grid-pie .grid2 div p {
   font-weight: 500;
@@ -505,6 +520,7 @@ main .contacto div .btn-primary {
   letter-spacing: 4px;
   justify-self: center;
   text-decoration: none;
+  transition: 0.5s;
 }
 .grid-pie .grid3 nav ul li a:hover {
   color: skyblue;
@@ -517,9 +533,13 @@ main .contacto div .btn-primary {
   bottom: 50px;
   right: 50px;
 }
-.grid-pie .whatsapp a img {
+.grid-pie a img {
   width: 70px;
   height: 70px;
+  transition: 1s;
+}
+.grid-pie a img:hover {
+  transform: scale(1.1);
 }
 
 @media screen and (max-width: 806px) {
