--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ header nav ul li{
 }
 header nav ul li a{
     text-decoration: none;
+    transition: 0.5s;
 }
 header nav ul li a:hover{
     color: skyblue;
@@ -119,7 +120,7 @@ p{
     border-radius: 20px;
     margin-top: 9%;
     transition-property: all;
-    transition-duration: 1s;
+    transition-duration: 0.5s;
 }
 .boton-a:hover{
     background-color: white;
@@ -164,7 +165,7 @@ p{
     width: 315px;
     height: 450px;
     margin-left: 20%;
-    border-radius: 20px;
+    border-radius: 15%;
     padding: 10px;
 }
 .porque-terapia{
@@ -202,7 +203,7 @@ p{
     width: 634px;
     height: 500px;
     margin-top: 7%;
-    border-radius: 20px;
+    border-radius: 50%;
     padding: 10px;
 }
 .esperar-terapia{
@@ -241,7 +242,7 @@ p{
     width: 634px;
     height: 500px;
     margin-top: 9%;
-    border-radius: 20px;
+    border-radius: 50%;
     padding: 10px;
 }
 .grid-palabras{
@@ -287,12 +288,22 @@ p{
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    transition: 1s;
 }
 .servicios div img{
     width: 340px;
     height: auto;
     padding-bottom: 20px;
-    border-radius: 15px;
+    border-radius: 45%;
+}
+.servicios-psico1:hover{
+    transform: scale(1.2);
+}
+.servicios-psico2:hover{
+    transform: scale(1.2);
+}
+.servicios-psico3:hover{
+    transform: scale(1.2);
 }
 .boton{
     background-color: skyblue;
@@ -303,7 +314,7 @@ p{
     padding: 12px;
     border-radius: 20px;
     transition-property: all;
-    transition-duration: 1s;
+    transition-duration: 0.5s;
 }
 .boton:hover{
     background-color: white;
@@ -353,6 +364,10 @@ p{
     height: 23px;
     position: absolute;
     left: 7cm;
+    transition: 1s;
+}
+.grid2 img:hover{
+    transform: scale(1.3);
 }
 .grid3 ul li a{
     color:black;
@@ -365,6 +380,7 @@ p{
 }
 footer nav ul li a{
     text-decoration: none;
+    transition: 0.5s;
 }
 footer nav ul li a:hover{
     color: skyblue;
@@ -379,6 +395,10 @@ nav ul li{
 footer a img{
     width: 70px;
     height: 70px;
+    transition: 1s;
+}
+footer a img:hover{
+    transform: scale(1.1);
 }
 .whatsapp{
     position: fixed;
