--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -30,6 +30,10 @@
                 height: 23px;
                 position: absolute;
                 left: 7cm;
+                transition: 1s;
+                &:hover{
+                    transform: scale(1.3);
+                }
             }
             p{
                 font-weight: 500;
@@ -52,6 +56,7 @@
                         letter-spacing: 4px;
                         justify-self:center;
                         text-decoration: none;
+                        transition: 0.5s;
                         &:hover{
                             color: $color-2;
                         }
@@ -67,11 +72,16 @@
         position: fixed;
         bottom: 50px;
         right: 50px;
+    }
     a{
         img{
             width: 70px;
             height: 70px;
+            transition: 1s;
+            &:hover{
+                transform: scale(1.1);
+            }
         }
-    }
+    
     }
 }
