--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -32,7 +32,7 @@
             width: 315px;
             height: 450px;
             margin-left: 20%;
-            border-radius: 20px;
+            border-radius: 15%;
             padding: 10px;
         }
     }
@@ -68,7 +68,7 @@
         width: 634px;
         height: 500px;
         margin-top: 7%;
-        border-radius: 20px;
+        border-radius: 50%;
         padding: 10px;
     }
 }
@@ -104,7 +104,7 @@
         width: 634px;
         height: 500px;
         margin-top: 9%;
-        border-radius: 20px;
+        border-radius: 50%;
         padding: 10px;
     }
 }
@@ -143,6 +143,7 @@
             box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
         -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
         -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+            transition: 1s;
             h3{
                 color: $color-4;
                 font-size: nth($font-size,8);
@@ -153,7 +154,22 @@
                 width: 340px;
                 height: auto;
                 padding-bottom: 20px;
-                border-radius: 15px;
+                border-radius: 45%;
+            }
+        }
+        .servicios-psico1{
+            &:hover{
+                transform: scale(1.2);
+            }
+        }
+        .servicios-psico2{
+            &:hover{
+                transform: scale(1.2);
+            }
+        }
+        .servicios-psico3{
+            &:hover{
+                transform: scale(1.2);
             }
         }
     }
